# squirrel_calibration

./: .rosinstall  .travis.rosinstall  .travis.yml  README.md
calibration_interface/: CMakeLists.txt  package.xml
calibration_interface/ros/launch/: pitag_setup.launch
raw_jointstate_saver/: CMakeLists.txt  package.xml
raw_jointstate_saver/src/: raw_jointstate_saver_node.cpp
robotino_calibration/: CMakeLists.txt
robotino_calibration_sim/: CMakeLists.txt  package.xml  readme.md
robotino_calibration_sim/launch/: sim.launch
robotino_calibration_sim/world/: calibration_room.world
robotino_calibration_sim/world/launch/: calibration_room.launch
robotino_calibration_sim/worlds/: calibration_room.world
robotino_calibration_sim/worlds/launch/: calibration_room.launch
software_architecture/: camera_base_calibration.xml
