<?xml version="1.0"?>
<package format="2">
  <name>raw_jointstate_saver</name>
  <version>0.0.0</version>
  <description>Allows to save joint states of arm and camera to text file of RAW.</description>

  <maintainer email="m.riedlinger@live.de">Marc Riedlinger</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
</package>
