<?xml version="1.0"?>
<package format="2">
	<name>robotino_calibration_sim</name>
	<version>0.0.0</version>
	<description>The robotino_calibration_sim package. Allows user to start a calibration simulation.</description>

	<license>LGPL</license>
	<url type="website">http://wiki.ros.org/robotino_calibration</url>

	<maintainer email="marc.riedlinger@ipa.fraunhofer.de">Marc Riedlinger</maintainer>
	<author email="marc.riedlinger@ipa.fraunhofer.de">Marc Riedlinger</author>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>gazebo_ros</depend>
		
	<exec_depend>robotino_bringup_sim</exec_depend>
	
	<export>
		<gazebo_ros gazebo_model_path="${prefix}/worlds"/> 
	</export>

</package>
